bug fix pygments pre overflow

--- a/jedlab-web/src/main/webapp/css/pygments.css
+++ b/jedlab-web/src/main/webapp/css/pygments.css
@@ -1,6 +1,6 @@
 td.linenos { background-color: #f0f0f0; padding-right: 10px; }
 span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }
-pre { line-height: 125%; }
+pre { line-height: 125%; overflow: hidden;}
 body .hll { background-color: #ffffcc }
 body  { background: #f8f8f8; }
 body .c { color: #008800; font-style: italic } /* Comment */
